# Cambricon

./: fnet_forward_offline_new.cpp  time.xlsx
magicmind/: README.md  (+5 more)
magicmind/basic_samples/: CMakeLists.txt  README.md  build.sh
magicmind/basic_samples/sample_calibration/: README.md  run.sh  sample_calibration.cc  sample_calibration.h
magicmind/basic_samples/sample_network_modify/: README.md  run.sh  sample_network_modify.cc
magicmind/basic_samples/sample_ops/: README.md
magicmind/basic_samples/sample_ops/sample_abs/: abs.cc  run.sh
magicmind/basic_samples/sample_ops/sample_activation/: activation.cc  run.sh
magicmind/basic_samples/sample_ops/sample_add/: add.cc  run.sh
magicmind/basic_samples/sample_ops/sample_argmax/: argmax.cc  run.sh
magicmind/basic_samples/sample_ops/sample_argmin/: argmin.cc  run.sh
magicmind/basic_samples/sample_ops/sample_asstrided/: asstrided.cc  run.sh
magicmind/basic_samples/sample_ops/sample_avgpool2d/: avgpool2d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_avgpool3d/: avgpool3d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_batchtospace/: batchtospace.cc  run.sh
magicmind/basic_samples/sample_ops/sample_cast/: cast.cc  run.sh
magicmind/basic_samples/sample_ops/sample_clip/: clip.cc  run.sh
magicmind/basic_samples/sample_ops/sample_clone/: clone.cc  run.sh
magicmind/basic_samples/sample_ops/sample_concat/: concat.cc  run.sh
magicmind/basic_samples/sample_ops/sample_conv1d/: conv1d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_conv2d/: conv2d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_conv3d/: conv3d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_cos/: cos.cc  run.sh
magicmind/basic_samples/sample_ops/sample_cosinesimilarity/: cosinesimilarity.cc  run.sh
magicmind/basic_samples/sample_ops/sample_crop/: crop.cc  run.sh
magicmind/basic_samples/sample_ops/sample_deconv/: deconv.cc  run.sh
magicmind/basic_samples/sample_ops/sample_deconv1d/: deconv1d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_deformconv2d/: deformconv2d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_div/: div.cc  run.sh
magicmind/basic_samples/sample_ops/sample_dynamicstitch/: dynamicstitch.cc  run.sh
magicmind/basic_samples/sample_ops/sample_elu/: elu.cc  run.sh
magicmind/basic_samples/sample_ops/sample_embedding/: embedding.cc  run.sh
magicmind/basic_samples/sample_ops/sample_erf/: erf.cc  run.sh
magicmind/basic_samples/sample_ops/sample_exp/: exp.cc  run.sh
magicmind/basic_samples/sample_ops/sample_floor/: floor.cc  run.sh
magicmind/basic_samples/sample_ops/sample_floordiv/: floordiv.cc  run.sh
magicmind/basic_samples/sample_ops/sample_floormod/: floormod.cc  run.sh
magicmind/basic_samples/sample_ops/sample_fusedbatchnorm/: fusedbatchnorm.cc  run.sh
magicmind/basic_samples/sample_ops/sample_gatherelw/: gatherelw.cc  run.sh
magicmind/basic_samples/sample_ops/sample_groupnorm/: groupnorm.cc  run.sh
magicmind/basic_samples/sample_ops/sample_gru/: gru.cc  run.sh
magicmind/basic_samples/sample_ops/sample_if/: if.cc  run.sh
magicmind/basic_samples/sample_ops/sample_innerproduct/: innerproduct.cc  run.sh
magicmind/basic_samples/sample_ops/sample_interp/: interp.cc  run.sh
magicmind/basic_samples/sample_ops/sample_invertpermutation/: invertpermutation.cc  run.sh
magicmind/basic_samples/sample_ops/sample_isfinite/: isfinite.cc  run.sh
magicmind/basic_samples/sample_ops/sample_layernorm/: layernorm.cc  run.sh
magicmind/basic_samples/sample_ops/sample_listdiff/: listdiff.cc  run.sh
magicmind/basic_samples/sample_ops/sample_log/: log.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicaland/: logicaland.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicaleq/: logicaleq.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalge/: logicalge.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalgt/: logicalgt.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalle/: logicalle.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicallt/: logicallt.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalne/: logicalne.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalnot/: logicalnot.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalor/: logicalor.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logicalxor/: logicalxor.cc  run.sh
magicmind/basic_samples/sample_ops/sample_logsoftmax/: logsoftmax.cc  run.sh
magicmind/basic_samples/sample_ops/sample_lrn/: lrn.cc  run.sh
magicmind/basic_samples/sample_ops/sample_maskedfill/: maskedfill.cc  run.sh
magicmind/basic_samples/sample_ops/sample_maskedselect/: maskedselect.cc  run.sh
magicmind/basic_samples/sample_ops/sample_matmul/: matmul.cc  run.sh
magicmind/basic_samples/sample_ops/sample_matrixbandpart/: matrixbandpart.cc  run.sh
magicmind/basic_samples/sample_ops/sample_maximum/: maximum.cc  run.sh
magicmind/basic_samples/sample_ops/sample_maxpool2d/: maxpool2d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_maxpool3d/: maxpool3d.cc  run.sh
magicmind/basic_samples/sample_ops/sample_minimum/: minimum.cc  run.sh
magicmind/basic_samples/sample_plugin_crop/: README.md  build.cc  run.sh
magicmind/basic_samples/sample_pluginop/: README.md
magicmind/basic_samples/sample_quantization/: README.md  run.sh  sample_quantization.cc
magicmind/basic_samples/sample_refit/: README.md  refit_model.cc  refit_model.h  run.sh  sample_refit.cc  worker.cc  worker.h
magicmind/basic_samples/sample_runtime/: README.md  remote_server.cc  run.sh  sample_runtime.cc  sample_runtime.h
magicmind/mm_build/: CMakeLists.txt  README.md  build_param.h  main.cc  main_process.cc  main_process.h  parser.cc  parser.h  run.sh  sample_list.txt
magicmind/mm_run/: CMakeLists.txt  inference.cc  inference.h  main.cc  run.cc  run.h  run_param.h  shape_groups.cc  shape_groups.h  stage.cc  stage.h  trace.cc  trace.h
magicmind/mm_run/example/: run.sh  shape_json1.json  shape_json2.json
magicmind/tools/diff/: CMakeLists.txt  README.md  diff.cc
(+149 files in other folders)
